@@ -1,1 +1,0 @@
-Expand a Unix file glob (wildcard) into a list of matching file names.
