@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2005/02/23 22:24:25 agc Exp $
-
-SHA1 (p5-FileKGlob-1.2/FileKGlob.tar.gz) = 3b959d9b75cf44f0faa3167ece70e08b2e7795b6
-RMD160 (p5-FileKGlob-1.2/FileKGlob.tar.gz) = 9979211e6f53ad1f919ba223890eae01bc645b2a
-Size (p5-FileKGlob-1.2/FileKGlob.tar.gz) = 7653 bytes
